--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       e.preventDefault();
       const username = document.getElementById('username').value;
       localStorage.setItem("username", username);
-      window.location.href = "index.html";
+      window.location.href = "home.html";
     }
   </script>
 </body>
