--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
     function register(e) {
       e.preventDefault();
       alert("Pendaftaran berhasil! Silakan login.");
-      window.location.href = "login.html";
+      window.location.href = "index.html";
     }
   </script>
 </body>
